[package]
name = "scrumm-cgi"
version = "0.1.0"
authors = ["Curtis Millar <curtis@curtism.me>"]
edition = "2018"
description = "A CGI tool to manage scrumm-style issues in GitHub"

[[bin]]
name = "scrumm"
path = "src/main.rs"

[dependencies]
cgi = "0.2.0"
failure = "0.1.5"
serde = "1.0.88"
serde_derive = "1.0.88"
envy = "0.4.0"
horrorshow = "0.6.5"
